# mach-terminal

./: .cursorrules  .gitignore  CHANGELOG.md  README.md  RELEASING.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: audit.toml
.cursor/runbook/: 01_ARCHITECTURE.md  04_CURRENT_STATE.md
.github/workflows/: ci.yml  dogfood-build.yml  nightly-burnin.yml  release.yml
config/: burnin-thresholds.json
docs/: ai-internals-audit.md  continuation-handoff.md  deep-link-contract.md  manual-qa.md  oss-flip-day.md  oss-prep.md  phase2-perf-spike.md  runtime-contracts.md  signing-setup.md
docs/linear/: TER-26-28-post-rc8.md
public/fonts/: Symbols-Nerd-Font-NOTICE.txt
scripts/: dev-with-cleanup.mjs  invoke-smoke.mjs  linear-close-ter-24-25.mjs  linear-create-ter-26-28.mjs  linear-list-ter-recent.mjs  list-release-artifacts.mjs  nightly-burnin.mjs  release-smoke.mjs  setup-release-signing.ps1  stability-signoff.mjs  threshold-gates.mjs
scripts/ci/: install-linux-tauri-deps.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/shell/: mach-init.bash  mach-init.ps1  mach-init.zsh
src-tauri/src/: child_env.rs  composer_completion.rs  lib.rs  models.rs  osc133.rs  provider_host.rs  provider_secrets.rs  session_manager.rs  settings.rs  shell_detect.rs  shell_integration.rs  win_env.rs
src-tauri/tests/: provider_host_behavior.rs  pty_behavior.rs  settings_persistence.rs  shell_integration_invoke_smoke.rs  workspace_layout_persistence.rs
src-tauri/tests/shell_integration_invoke_smoke/: body.rs
src/components/: AiInsightPanel.tsx  AppSettingsModal.tsx  CommandPalette.tsx  ExitPersistOverlay.tsx  FirstRunSetup.test.ts  FirstRunSetup.tsx  GroupComposer.tsx  HistoryPanel.tsx  MachStatusStrip.tsx  NewTabProfileModal.tsx  OpsRail.tsx  PaneLayout.tsx  (+9 more)
(+77 files in other folders)
