[package]
name = "mach-terminal"
version = "0.1.0"
description = "Mach Terminal desktop shell"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mach_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
invoke-smoke = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
portable-pty = "0.8"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-opentelemetry = "0.29"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "trace"] }
keyring = "3"

[dev-dependencies]
tempfile = "3"

# `tauri/test` (MockRuntime) is only for integration tests on non-Windows. Enabling it on the
# library crate breaks the lib test binary with STATUS_ENTRYPOINT_NOT_FOUND on Windows.
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
tauri = { version = "2", features = ["test"] }

[[test]]
name = "shell_integration_invoke_smoke"
path = "tests/shell_integration_invoke_smoke.rs"
required-features = ["invoke-smoke"]

